--- a/src/sass/components/_refactor.scss
+++ b/src/sass/components/_refactor.scss
@@ -180,7 +180,7 @@ iframe {
 }
 
 /* Icon */
-.fa-dropdown .icon,
+.fa-dropdown--secondary .icon,
 .fa-footer .icon {
 	margin-right: 0.5rem;
 }
