--- a/src/sass/settings/_theme.scss
+++ b/src/sass/settings/_theme.scss
@@ -75,6 +75,7 @@ $variables: (
 	--button-bg-brand: $blue-sf,
 	--button-c-brand: $white,
 	--button-bg-brand-hover: $blue-medium-1,
+	--button-c-brand-hover: $white,
 	--button-bg-draft: $blue-sf,
 	--button-c-draft: $white,
 	--button-bg-draft-hover: $blue-medium-1,
